--- a/src/slides/01_01.md
+++ b/src/slides/01_01.md
@@ -1,135 +1,164 @@
 ---
-title: CodeSwing
+title: JSX
 slide: '<!-- .slide: data-visibility="hidden"-->'
 ---
 
 <!-- .slide: data-state="layout-title" class="bg-dark"-->
 
-# CodeSwing
-
-<div class="slide-link"><a href="https://go.raybo.org/2OXU"><i class="fab fa-slideshare"></i> go.raybo.org/2OXU</a></div>
+# JSX
 
 > >
 
-In addition to working with CodeSpaces, this course uses CodeSwing to help run and preview your code.
+Let's start by going over one of the things that people like...and dislike about React and that's JSX.
 
 ---
 
-# CodeSwing
+# JSX
 
-- [Code Playground](https://marketplace.visualstudio.com/items?itemName=codespaces-Contrib.codeswing)
-- Try It Button
+- JavaScript Syntax Extension
+- HTML & JSX
+- Templating
 
 > >
 
-CodeSwing is an interactive editor that you can run inside Visual Studio Code. It's similar to something like CodePen.
+JSX is the language that you use to write React, it stands for JavaScript Syntax Extension, but also know and JavaScript XML since it's a combination of JavaScript and something that looks like the old XHTML version of HTML.
 
-Most of the time, if you're following along with the slides, you'll be able to simply click on one of these try it buttons, which will launch a code preview with the proper code.
-
-If you're curious as to how that works, then let's take a deeper dive.
+Basically it's a way to write HTML inside JavaScript. It has a few strange rules of it's own, but it works real well.
 
 ---
 
-# The Repo
+# Basic Sample
 
-- Branch Dropdown
-- Code Button
-- Create CodeSpace
-
-I'm going to go to the repo for this course and then from the branch dropdown. I'll choose the branch for the this video which is in chapter one and the first video.
-
-Then I'm going to go to the green code button. I'll make sure I'm in the codespaces tab and choose create codespace on the branch.
-
----
-
-# CodeSwing
-
-- Script Pane
-- Preview Pane
-- Terminal
+```jsx
+function App() {
+  return <h1>Meet the StarGazers</h1>;
+}
+export default App;
+```
 
 > >
 
-You should see a pane with the javascript we'll be using for the lesson
+Okay, so at first, it looks like regular JavaScript, but you can see that we're using an h1 tag. This is the beauty of JSX, it lets you use both, together in almost perfect harmony.
 
-A preview pane will show you the output of an HTML file that you can target.
-
-You should also see a terminal pane at the bottom of the screen.
+But, there's a lot of peculiarities to the language, so let's go further.
 
 ---
 
-# The Magic
+# Single Parent
 
-- Explorer
-- `script.js`
-- `canvas.html`
-- [pico.css](https://picocss.com/)
-- `div#output`
+```jsx
+<hgroup>
+  <h1>Meet the StarGazers</h1>
+  <p>Members of an <b>intergalactic alliance</b>...</p>
+</hgroup>
+```
 
 > >
 
-If you open the `explorer` from the `activity bar`, you can see the files that are making this work.
+You are only allowed to use one parent element in your HTML. So, if I were to remove the hgroup tag here, I would get an error.
 
-The `script.js` file has the javascript you're looking at.
+Let's take a look at this in CodeSpaces. I'm going to go to the URL for the codespace.
 
-The canvas.html has the HTML for the page on the right.
-
-You may notice that I'm preloading a library called [pico.css](https://picocss.com/) to make things look decent without any styles.
-
-There's a special `DIV` with an ID of output that I can use to add somethign to the page with JavaScript if I want to.
-
-Otherwise it's a pretty boring page.
+Sometimes, people use a fragment to solve this, so instead of the hgroup tag, you would use an empty element <></>.
 
 ---
 
-# More Info
+# Self Closing Tags
 
-- Control views
-- Closing Files
-- Rebooting Swing
+```jsx
+return (
+  <hgroup>
+    <img src="images/group.svg" alt="StarGazer Group" />
+    <hgroup>
+      <h1>Meet the <i>{name}</i></h1>
+      <p>Members of an <b>intergalactic alliance</b><br />
+        paving the way for peace and benevolence among all species...</p>
+    </hgroup>
+  </hgroup>
+);
+```
+
+- `<br />` or `<img />`
+- return with `()`
 
 > >
 
-You can customize the view by moving things around codespaces just like you would with Visual Studio Code so you can move panes around.
+In JSX, all tags have to self-close. So, if I were to remove the slash in the <br /> tag, I would get an error.
 
-If you close accidentally close the script file, you can just double click on the explorer to open it.
+The same thing would happen in an image tag.
 
-You can restart the swing by using the command palette (hamburger/view/commandpalette) and selecting `CodeSwing:Open Swing...` Choose the current folder and hit enter. It will redraw the swing.
+By the way, when you want to use multi line code in JSX, just like in JavaScript, the return statement can't be on a line by itself. So you have to use parenthesis otherwise your browser's compiler will add a semicolon and break the whole thing.
 
 ---
 
-# Swing Options
+# Reserved Keywords
 
-- Swing Icons
-- Play Code
-- Console
-- Add libraries
+```
+<div className="container">
+  <article>
+  ...
+  </article>
+</div>
+```
+
+- `className` instead of `class`
+- `HTMLFor` instead of `for`
 
 > >
 
-You may notice a few extra icons on the preview tab
+You can't use reserved JavaScript keywords like class or for in jsx.
 
-You can play the code if you need to force execute something...although it should auto-update as you type.
+Instead of class, we use className and similarly with
 
-You can also see icons for opening the console (although the setup already does that for you)
-
-There's some shortcuts for the commands like some controls for changing the layout.
-
-Finally, there's an icon for the adding a library so you can add some other css or script libraries like React.
-
-You can also find all the commands using the command palette.
+for, we use HTMLFor. It's something you have to remember and annoy you a bit as you write in JSX.
 
 ---
 
-# Advanced
+# Expressions
 
-- `codeswing.json`
-- [Manifest](https://marketplace.visualstudio.com/items?itemName=codespaces-Contrib.codeswing#swing-manifest) info
-- Rebooting Swing
-- > >
+```jsx
+const name = 'StarGazers';
+...
+<h1>Meet the <i>{name}</i></h1>
+```
 
-There's a configuration file you can use to control the swing called `codeswing.json`.
+> >
 
-You can use that to adjust the swing. For us, it's making sure that the terminal is open when you open one of these.
+You can use expressions in your code, so if you create a variable for an element, you can use it in the JSX.
 
-If you want to see how this code would work in your regular browser, we also have the livepreview extensions loaded, so you can just right click on the canvas.html file in the manifest and choose `Open in Browser`.
+The expressions can be a variable name and other valid JavaScript expressions.
+
+```jsx
+
+---
+
+# Inline Styles
+
+```jsx
+<h1>Meet the <i style={{ color: "SteelBlue" }}>{name}</i></h1>
+```
+
+> >
+
+You can also use them to pass along values into your tags. This is the way you add inline styles into your code. However instead of writing regular CSS you create an object. If the selector has more than one word, you can also use camelCase.
+
+```jsx
+
+```jsx
+
+---
+
+# camelCase Attributes
+
+```
+<button className="outline" onClick={() => alert('Hi There')}>Click me</button>
+```
+
+- `onClick`, `onSubmit`, `onChange`
+
+> >
+
+As a matter of fact, all attributes in JSX are camelCased, so for things like an onClick event, you would also use a capital C, but it would be the same for things like onSubmit or onChange.
+
+
+JSX takes some getting used to, but it's a very powerful language. Once you get comfortable with it, you'll see that it is quite powerful.
