--- a/src/slides/01_02.md
+++ b/src/slides/01_02.md
@@ -1,121 +1,100 @@
 ---
-title: Mechanics of Functions
+title: Classes or Hooks
 slide: '<!-- .slide: data-visibility="hidden"-->'
 ---
 
 <!-- .slide: data-state="layout-title" class="bg-dark"-->
 
-# Mechanics of Functions
-
-<div class="slide-link"><a href="https://go.raybo.org/9SaN"><i class="fab fa-slideshare"></i> go.raybo.org/9SaN</a></div>
+# Classes or Hooks
 
 > >
 
-A function is a series of statements that are grouped together to perform specific tasks.
+React lets you reusable chunks of code called components using two styles: classes and hooks. Let's take a look at the differences and why hooks are more dominant.
 
 ---
 
-# Basics
+# Components
 
-```js
-function NAME(PARAMETERS,...) {
-  STATEMENTS;...
-  return VALUE;
+- Reusable code
+- Accept `props`
+- Return display
+
+> >
+
+Before we get into classes or hooks, lets define what a component is and does.
+
+Components are a way to create reusable code. Think of them like functions that are a bit more flexible.
+
+Components can accept any number of inputs called props
+
+and they return what will be displayed as part of your application.
+
+---
+
+# Class Components
+
+- Object syntax
+- Still valid
+- Harder to write
+
+> >
+
+React has been around for quite a while and until recently, its exclusively used the object syntax to create components.
+
+It's something that's fallen out of favor, but is still valid, but it's less familiar to modern developers.
+
+---
+
+# Class Component
+
+```jsx
+import React, { Component } from "react";
+
+class Welcome extends React.Component {
+  constructor() {
+    super();
+  }
+  render() {
+    return <h1>Meet the StarGazers</h1>;
+  }
 }
 ```
 
-- The `function` keyword
-- Followed by a `name`
-- Optional `parameters`
-- `Statements` in curly braces
-- `return` statement
-
 > >
 
-Regular functions are created using the `function` keyword.
+This is a basic class based components. Let's jump into our code.
 
-After this keyword, a name is given to the function. There are some specific rules. We'll talk about them in a bit.
+It might look familiar if you're used to writing Class based JavaScript.
 
-In Parenthesis, you can specify optional parameters. That means that you can pass values to the functions and those become variables inside the function.
+In order to use components, we import the React object and the component object from the React library.
 
-You can then add a series of statements inside curly braces. Each of those statements is usually separated by semicolons.
+Next we start by declaring a Class. Class names are always capitalized.
 
-There's a special statement you can use inside a function to return a value when the function is executed.
+Next we use the class to extend the functionality of a React component.
+
+We then use a special function called a constructor. The job of the constructor is to initialize the instance of the class when it is used.
+
+Then we get into the render statement, where you output what you want React to show.
+
+That seems like a lot for a simple component and that's the way components worked for a long time.
 
 ---
 
-# Starting Code
+# Passing Props
 
-```js
-const $ = document.querySelector.bind(document)
-const output = 'Hello World'
-
-$('#output').innerHTML = output
-console.log(output)
-```
-
-<a href="https://github.dev/LinkedInLearning/javascript-functions-2502735/tree/01_02b" target="_blank"><code class="code-royal">Try it</code></a>
-
-> >
-
-Let's use CodeSpaces to try this out.
-
-You'll notice that I've started you out with some code already. Let's talk about what that's setting up before we get into our function.
-
-I've set up two sample ways to output our code.
-
-```js
-const $ = document.querySelector.bind(document)
-const output = 'Hello World'
-
-$('#output').innerHTML = output
-console.log(output)
-```
-
-You can see that I'm setting up a dollar sign variable that gives JavaScript access to the document. It's really just a shortcut ot the DOM or document object model.
-
-Then I'm setting up a variable called output that I'm going to use to output the value.
-
-Using our dollar sign object, we can target an element in the HTML with an ID of output.
-
-The HTML for our page is in the canvas.html file, which you can get to in the explorer.
-
-Then I'm using the innerHTML property to set the value of the element to our ouput variable. That's what writing the hello world to our page.
-
-The other and much simpler way to output things is to use the console.log command. This is great for demos, but most of the time when I'm coding, I'm doing things on the page, so I wanted to show you both options.
-
----
-
-# Writing a Function
-
-```js
-function add(a, b) {
-  const c = a + b
-  return c
+```jsx
+class Welcome extends React.Component {
+  constructor(props) {
+    super(props);
+    this.state = { name: 'Star Geezers' };
+  }
+  render() {
+    return <h1>Meet the <i>{this.props.name}</i></h1>
+  }
 }
-const output = add(2, 2)
 ```
 
 > >
 
-Let's use CodeSpaces to try this out.
+A component that just prints out some HTML is pretty useles, so let's take a look at how we can make it accept a parameter, like you would a function.
 
----
-
-# Function Names
-
-- Case sensitive
-- camelCase
-- Descriptive verbs
-
-> >
-
-A couple of suggestions for naming functions.
-
-First, be careful that variable names are case sensitive, so uppercase A in Add is differen than lowercase add
-
-Typically function names are written in camelCase, First letter lowercase if the name has another word, it's in uppercase
-
-Try to use descriptive verbs. I could have called my function addNumbers, but add is short enough.
-
-By the way writing the function is called declaring the function, and using the function is called invoking the function, but things get really interesting when we dive into how this works, so lets keep going.
