--- a/src/slides/01_01.md
+++ b/src/slides/01_01.md
@@ -134,9 +134,9 @@ The expressions can be a variable name and other valid JavaScript expressions.
 
 # Inline Styles
 
-```jsx
-<h1>Meet the <i style={{ color: "SteelBlue" }}>{name}</i></h1>
-```
+<pre><code data-trim data-noescape><script type="text/template">
+    <h1>Meet the <i style={{  }}>{name}</i></h1>
+</script></code></pre>
 
 > >
 
