--- a/src/slides/01_02.md
+++ b/src/slides/01_02.md
@@ -9,7 +9,7 @@ slide: '<!-- .slide: data-visibility="hidden"-->'
 
 > >
 
-React lets you reusable chunks of code called components using two styles: classes and hooks. Let's take a look at the differences and why hooks are more dominant.
+In React, you can reuse bits of code called components...using of two styles: classes and hooks. Let's take a look at the differences and why hooks are more dominant.
 
 ---
 
@@ -86,7 +86,6 @@ That seems like a lot for a simple component and that's the way components worke
 class Welcome extends React.Component {
   constructor(props) {
     super(props);
-    this.state = { name: 'Star Geezers' };
   }
   render() {
     return <h1>Meet the <i>{this.props.name}</i></h1>
@@ -98,3 +97,22 @@ class Welcome extends React.Component {
 
 A component that just prints out some HTML is pretty useles, so let's take a look at how we can make it accept a parameter, like you would a function.
 
+To do that, we can pass along props, or properties to the component, just like we would with a regular HTML tag.
+
+In our return statement, we can use the this keyword to target the props we receive in the constructor and then display our name.
+
+---
+
+# Hooks
+
+```jsx
+const Welcome = (props) => {
+  return (
+    <h1>Meet the <i>{props.name}</i></h1>
+  )
+}
+```
+
+> >
+
+Hooks allow you to use the function syntax you already know to create componets. Let's take a look at how you would use them to create this component. You'll see that it's a lot simpler.
