--- a/src/slides/01_04.md
+++ b/src/slides/01_04.md
@@ -7,18 +7,17 @@ slide: '<!-- .slide: data-visibility="hidden"-->'
 
 # Using Effects
 
-<div class="slide-link"><a href="https://go.raybo.org/9VUq"><i class="fab fa-slideshare"></i> go.raybo.org/9VUq</a></div>
-
 > >
 
-## The second most popular hook in react is the useEffect hook. Let's take a look at what it does and why you need it.
+The second most popular hook in react is the useEffect hook. Let's take a look at what it does and why you need it.
 
-# useEffect
+---
+# useEffect Hook
 
-- Side Effects
-- Outside Scope
-- Replaces Lifecycles
-- After Render
+- Side effects
+- Outside scope
+- Replaces lifecycles
+- After render
 
 > >
 
